<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    
    <!-- for setting -->
    <string name="pref_sorting_key">sort</string>
    <string name="pref_favorite_key">favorite</string>
    <string name="pref_sorting_label">Sort by</string>
    <!-- value mean sort by popular -->
    <string name="pref_sorting_default">0</string>
    <string name="pref_favprite_default">0</string>

    <string name="pref_sorting_pop">Popular</string>
    <string name="pref_sorting_rate">Rate</string>
    <string-array name="pref_sorting_item">
        <item>@string/pref_sorting_pop</item>
        <item>@string/pref_sorting_rate</item>
    </string-array>
    <string name="title_activity_detail">Movie Detail</string>

    <string name="movie_poster_contentDescription">Movie Poster</string>
    <string name="text_movie_release_date">Release Date</string>
    <string name="text_movie_vote">Rating</string>
    <string name="text_movie_plot">Plot</string>
    <string name="text_movie_review">Review</string>
    <string name="text_movie_trailer">Trailer</string>
    <string name="text_dummy">N/A</string>
    <string name="text_button">Watch</string>

    <string name="content_authority">me.hanthong.android.popularmovies</string>
</resources>
