<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_grey_300">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_movie_name"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textIsSelectable="false"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="#FFFFFF"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">


                    <ImageView
                        android:id="@+id/image_movie_poster"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_poster_contentDescription"
                        android:scaleType="centerCrop"
                        android:src="@drawable/hold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="30dp">

                        <TextView
                            android:id="@+id/text_movie_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_movie_release_date"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movie_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10-20-2015"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/text_movie_vote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_movie_vote"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movie_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5/10"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <ImageButton
                            android:id="@+id/movie_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawable="@drawable/ic_star_border_black_24dp"/>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_movie_plot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/text_movie_plot"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/movie_plot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="@string/text_dummy"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_movie_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/text_movie_trailer"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/movie_trailer_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/text_dummy"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Button
                        android:id="@+id/movie_button_trailer_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_button"
                        android:textSize="20sp"
                        android:drawableLeft="@drawable/ic_play_circle_filled_black_24dp"/>

                    <TextView
                        android:id="@+id/movie_trailer_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/text_dummy"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <Button
                        android:id="@+id/movie_button_trailer_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_button"
                        android:textSize="20sp"
                        android:drawableLeft="@drawable/ic_play_circle_filled_black_24dp"/>
                    <TextView
                        android:id="@+id/movie_trailer_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/text_dummy"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <Button
                        android:id="@+id/movie_button_trailer_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_button"
                        android:textSize="20sp"
                        android:drawableLeft="@drawable/ic_play_circle_filled_black_24dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_movie_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/text_movie_review"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/darker_gray" />
                    <TextView
                        android:id="@+id/movie_review"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="@string/text_dummy"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
